--- a/genindex.html
+++ b/genindex.html
@@ -206,6 +206,8 @@
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.yfi.is_buying_with_buyer">is_buying_with_buyer() (in module yearn_treasury.rules.ignore.swaps.yfi)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_buying_yvboost">is_buying_yvboost() (in module yearn_treasury.rules.ignore.passthru)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.security.is_chainsec_audit">is_chainsec_audit() (in module yearn_treasury.rules.expense.security)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.farming.is_comp_rewards">is_comp_rewards() (in module yearn_treasury.rules.revenue.farming)</a>
