--- a/_modules/yearn_treasury/constants.html
+++ b/_modules/yearn_treasury/constants.html
@@ -103,6 +103,10 @@
     <span class="n">Network</span><span class="o">.</span><span class="n">Base</span><span class="p">:</span> <span class="s2">&quot;0xbfAABa9F56A39B814281D68d2Ad949e88D06b02E&quot;</span><span class="p">,</span>
 <span class="p">}</span>
 
+<span class="n">YSWAP_MULTISIGS</span><span class="p">:</span> <span class="n">Final</span> <span class="o">=</span> <span class="p">{</span>
+    <span class="n">Network</span><span class="o">.</span><span class="n">Mainnet</span><span class="p">:</span> <span class="s2">&quot;0x7d2aB9CA511EBD6F03971Fb417d3492aA82513f0&quot;</span><span class="p">,</span>
+<span class="p">}</span>
+
 
 <span class="k">if</span> <span class="n">CHAINID</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">TREASURY_MULTISIGS</span> <span class="ow">or</span> <span class="n">CHAINID</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">YCHAD_MULTISIGS</span><span class="p">:</span>
     <span class="k">raise</span> <span class="ne">RuntimeError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">Network</span><span class="p">(</span><span class="n">CHAINID</span><span class="p">)</span><span class="si">}</span><span class="s2"> is not supported&quot;</span><span class="p">)</span>
@@ -112,6 +116,8 @@
 
 <span class="n">YCHAD_MULTISIG</span><span class="p">:</span> <span class="n">Final</span> <span class="o">=</span> <span class="n">convert</span><span class="o">.</span><span class="n">to_address</span><span class="p">(</span><span class="n">YCHAD_MULTISIGS</span><span class="p">[</span><span class="n">CHAINID</span><span class="p">])</span>  <span class="c1"># type: ignore [index]</span>
 
+<span class="n">__yswap_multisig</span> <span class="o">=</span> <span class="n">YSWAP_MULTISIGS</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">CHAINID</span><span class="p">)</span>  <span class="c1"># type: ignore [call-overload]</span>
+<span class="n">YSWAP_MULTISIG</span><span class="p">:</span> <span class="n">Final</span> <span class="o">=</span> <span class="n">convert</span><span class="o">.</span><span class="n">to_address</span><span class="p">(</span><span class="n">__yswap_multisig</span><span class="p">)</span> <span class="k">if</span> <span class="n">__yswap_multisig</span> <span class="k">else</span> <span class="kc">None</span>
 
 <span class="n">_TREASURY_WALLETS</span><span class="p">:</span> <span class="n">Final</span> <span class="o">=</span> <span class="p">{</span>
     <span class="n">Network</span><span class="o">.</span><span class="n">Mainnet</span><span class="p">:</span> <span class="p">{</span>
@@ -119,7 +125,7 @@
         <span class="n">YCHAD_MULTISIG</span><span class="p">,</span>
         <span class="s2">&quot;0xb99a40fcE04cb740EB79fC04976CA15aF69AaaaE&quot;</span><span class="p">,</span>  <span class="c1"># Yearn Treasury V1</span>
         <span class="s2">&quot;0x5f0845101857d2A91627478e302357860b1598a1&quot;</span><span class="p">,</span>  <span class="c1"># Yearn KP3R Wallet</span>
-        <span class="s2">&quot;0x7d2aB9CA511EBD6F03971Fb417d3492aA82513f0&quot;</span><span class="p">,</span>  <span class="c1"># ySwap Multisig</span>
+        <span class="n">YSWAP_MULTISIG</span><span class="p">,</span>
         <span class="s2">&quot;0x2C01B4AD51a67E2d8F02208F54dF9aC4c0B778B6&quot;</span><span class="p">,</span>  <span class="c1"># yMechs Multisig</span>
         <span class="s2">&quot;0xE376e8e8E3B0793CD61C6F1283bA18548b726C2e&quot;</span><span class="p">,</span>  <span class="c1"># Fee Reimbursement Stash</span>
         <span class="s2">&quot;0xC001d00d425Fa92C4F840baA8f1e0c27c4297a0B&quot;</span><span class="p">,</span>  <span class="c1"># New token dumping wallet</span>
