deploy: 6f4e8f9afbf1005f606e68b6fc73a2f97b6817ca

--- a/genindex.html
+++ b/genindex.html
@@ -108,10 +108,10 @@
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve._is_curve_withdrawal_multi">_is_curve_withdrawal_multi() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve._is_curve_withdrawal_one">_is_curve_withdrawal_one() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.farming._is_generic_comp_rewards">_is_generic_comp_rewards() (in module yearn_treasury.rules.revenue.farming)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve._is_new_style">_is_new_style() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
@@ -123,6 +123,8 @@
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.vaults._is_y3crv">_is_y3crv() (in module yearn_treasury.rules.revenue.vaults)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.vaults._is_ypool">_is_ypool() (in module yearn_treasury.rules.revenue.vaults)</a>
+</li>
+      <li><a href="source/yearn_treasury.html#yearn_treasury.shitcoins._SHITCOINS">_SHITCOINS (in module yearn_treasury.shitcoins)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve._token_is_curvey">_token_is_curvey() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
 </li>
@@ -593,10 +595,12 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/yearn_treasury.html#yearn_treasury.constants.Args.sort_rules">sort_rules (yearn_treasury.constants.Args attribute)</a>
+      <li><a href="source/yearn_treasury.html#yearn_treasury.shitcoins.SHITCOINS">SHITCOINS (in module yearn_treasury.shitcoins)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/yearn_treasury.html#yearn_treasury.constants.Args.sort_rules">sort_rules (yearn_treasury.constants.Args attribute)</a>
+</li>
       <li><a href="source/yearn_treasury.budget.html#yearn_treasury.budget.BudgetRequest.state">state (yearn_treasury.budget.BudgetRequest attribute)</a>
 </li>
   </ul></td>
