--- a/_modules/yearn_treasury/rules/revenue/vaults.html
+++ b/_modules/yearn_treasury/rules/revenue/vaults.html
@@ -74,9 +74,9 @@
 <span></span><span class="kn">from</span><span class="w"> </span><span class="nn">logging</span><span class="w"> </span><span class="kn">import</span> <span class="n">getLogger</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">typing</span><span class="w"> </span><span class="kn">import</span> <span class="n">Final</span><span class="p">,</span> <span class="n">Optional</span>
 
-<span class="kn">from</span><span class="w"> </span><span class="nn">async_lru</span><span class="w"> </span><span class="kn">import</span> <span class="n">alru_cache</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">dao_treasury</span><span class="w"> </span><span class="kn">import</span> <span class="n">TreasuryTx</span><span class="p">,</span> <span class="n">revenue</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">eth_typing</span><span class="w"> </span><span class="kn">import</span> <span class="n">ChecksumAddress</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">faster_async_lru</span><span class="w"> </span><span class="kn">import</span> <span class="n">alru_cache</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">y</span><span class="w"> </span><span class="kn">import</span> <span class="n">Contract</span><span class="p">,</span> <span class="n">Network</span>
 
 <span class="kn">from</span><span class="w"> </span><span class="nn">yearn_treasury.vaults</span><span class="w"> </span><span class="kn">import</span> <span class="n">v1</span><span class="p">,</span> <span class="n">v2</span>
@@ -120,8 +120,6 @@
 
 
 
-<div class="viewcode-block" id="_get_rewards">
-<a class="viewcode-back" href="../../../../source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.vaults._get_rewards">[docs]</a>
 <span class="nd">@alru_cache</span><span class="p">(</span><span class="n">maxsize</span><span class="o">=</span><span class="mi">1000</span><span class="p">)</span>
 <span class="k">async</span> <span class="k">def</span><span class="w"> </span><span class="nf">_get_rewards</span><span class="p">(</span><span class="n">controller</span><span class="p">:</span> <span class="n">Contract</span><span class="p">,</span> <span class="n">block</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Optional</span><span class="p">[</span><span class="n">ChecksumAddress</span><span class="p">]:</span>
     <span class="k">try</span><span class="p">:</span>
@@ -129,16 +127,12 @@
     <span class="k">except</span> <span class="ne">ValueError</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
         <span class="k">if</span> <span class="nb">str</span><span class="p">(</span><span class="n">e</span><span class="p">)</span> <span class="o">==</span> <span class="s2">&quot;No data was returned - the call likely reverted&quot;</span><span class="p">:</span>
             <span class="k">return</span> <span class="kc">None</span>
-        <span class="k">raise</span></div>
+        <span class="k">raise</span>
 
 
-
-<div class="viewcode-block" id="_get_controller">
-<a class="viewcode-back" href="../../../../source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.vaults._get_controller">[docs]</a>
 <span class="nd">@alru_cache</span><span class="p">(</span><span class="n">maxsize</span><span class="o">=</span><span class="kc">None</span><span class="p">)</span>
 <span class="k">async</span> <span class="k">def</span><span class="w"> </span><span class="nf">_get_controller</span><span class="p">(</span><span class="n">vault</span><span class="p">:</span> <span class="n">Contract</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Contract</span><span class="p">:</span>
-    <span class="k">return</span> <span class="k">await</span> <span class="n">Contract</span><span class="o">.</span><span class="n">coroutine</span><span class="p">(</span><span class="k">await</span> <span class="n">vault</span><span class="o">.</span><span class="n">controller</span><span class="p">)</span>  <span class="c1"># type: ignore [return-value]</span></div>
-
+    <span class="k">return</span> <span class="k">await</span> <span class="n">Contract</span><span class="o">.</span><span class="n">coroutine</span><span class="p">(</span><span class="k">await</span> <span class="n">vault</span><span class="o">.</span><span class="n">controller</span><span class="p">)</span>  <span class="c1"># type: ignore [return-value]</span>
 
 
 <div class="viewcode-block" id="is_v1_vault_fees">
