--- a/_modules/yearn_treasury/rules/ignore/swaps/yfi.html
+++ b/_modules/yearn_treasury/rules/ignore/swaps/yfi.html
@@ -124,21 +124,27 @@
             <span class="n">events</span> <span class="o">=</span> <span class="n">tx</span><span class="o">.</span><span class="n">events</span>
         <span class="k">except</span> <span class="ne">KeyError</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
             <span class="k">if</span> <span class="s2">&quot;components&quot;</span> <span class="ow">in</span> <span class="nb">str</span><span class="p">(</span><span class="n">e</span><span class="p">):</span>
+                <span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;cannot parse events of possible YFI buyback </span><span class="si">{</span><span class="n">tx</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
                 <span class="k">return</span> <span class="kc">False</span>
             <span class="k">raise</span>
 
         <span class="k">if</span> <span class="s2">&quot;Buyback&quot;</span> <span class="ow">in</span> <span class="n">events</span><span class="p">:</span>
-            <span class="n">buyback_event</span> <span class="o">=</span> <span class="n">events</span><span class="p">[</span><span class="s2">&quot;Buyback&quot;</span><span class="p">]</span>
-            <span class="k">if</span> <span class="n">buyback_event</span><span class="o">.</span><span class="n">address</span> <span class="ow">in</span> <span class="n">VYPER_BUYERS</span> <span class="ow">and</span> <span class="nb">all</span><span class="p">(</span>
+            <span class="n">buyback_events</span> <span class="o">=</span> <span class="n">events</span><span class="p">[</span><span class="s2">&quot;Buyback&quot;</span><span class="p">]</span>
+            <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">buyback_events</span><span class="p">)</span> <span class="o">&gt;</span> <span class="mi">1</span><span class="p">:</span>
+                <span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Must code handler for multiple Buyback events in one tx: </span><span class="si">{</span><span class="n">tx</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
+                <span class="k">return</span> <span class="kc">False</span>
+            <span class="n">buyback_event</span> <span class="o">=</span> <span class="n">buyback_events</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
+            <span class="k">if</span> <span class="n">buyback_event</span><span class="o">.</span><span class="n">address</span> <span class="ow">in</span> <span class="n">VYPER_BUYERS</span> <span class="ow">and</span> <span class="nb">all</span><span class="p">(</span>  <span class="c1"># type: ignore [attr-defined]</span>
                 <span class="n">arg</span> <span class="ow">in</span> <span class="n">buyback_event</span> <span class="k">for</span> <span class="n">arg</span> <span class="ow">in</span> <span class="p">(</span><span class="s2">&quot;buyer&quot;</span><span class="p">,</span> <span class="s2">&quot;yfi&quot;</span><span class="p">,</span> <span class="s2">&quot;dai&quot;</span><span class="p">)</span>
             <span class="p">):</span>
-                <span class="n">buyback_amount</span> <span class="o">=</span> <span class="n">Decimal</span><span class="p">(</span><span class="n">buyback_event</span><span class="p">[</span><span class="s2">&quot;yfi&quot;</span><span class="p">])</span> <span class="o">/</span> <span class="mi">10</span><span class="o">**</span><span class="mi">18</span>  <span class="c1"># type: ignore [arg-type]</span>
+                <span class="n">buyback_amount</span> <span class="o">=</span> <span class="n">Decimal</span><span class="p">(</span><span class="n">buyback_event</span><span class="p">[</span><span class="s2">&quot;yfi&quot;</span><span class="p">])</span> <span class="o">/</span> <span class="mi">10</span><span class="o">**</span><span class="mi">18</span>  <span class="c1"># type: ignore [call-overload]</span>
                 <span class="k">if</span> <span class="n">tx</span><span class="o">.</span><span class="n">amount</span> <span class="o">==</span> <span class="n">buyback_amount</span><span class="p">:</span>
                     <span class="k">return</span> <span class="kc">True</span>
                 <span class="nb">print</span><span class="p">(</span>
                     <span class="sa">f</span><span class="s2">&quot;from node: </span><span class="si">{</span><span class="n">buyback_amount</span><span class="si">}</span><span class="s2"> from db: </span><span class="si">{</span><span class="n">tx</span><span class="o">.</span><span class="n">amount</span><span class="si">}</span><span class="s2"> diff: </span><span class="si">{</span><span class="n">buyback_amount</span><span class="w"> </span><span class="o">-</span><span class="w"> </span><span class="n">tx</span><span class="o">.</span><span class="n">amount</span><span class="si">}</span><span class="s2">&quot;</span>
                 <span class="p">)</span>
-                <span class="c1"># raise ValueError(f&#39;from node: {buyback_amount} from db: {tx.amount} diff: {buyback_amount - tx.amount}&#39;)</span>
+            <span class="k">else</span><span class="p">:</span>
+                <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;unhandled Buyback event: buyback_event&quot;</span><span class="p">)</span>
     <span class="k">return</span> <span class="kc">False</span></div>
 
 
